--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
@@ -61,6 +62,7 @@
     "eslint-plugin-storybook": "^9.0.12",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "next-router-mock": "^1.0.2",
     "playwright": "^1.53.1",
     "prettier": "3.5.3",
     "storybook": "^9.0.12",
