--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "format": "prettier . --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate:migrations": "npx drizzle-kit generate",
+    "apply:migrations": "npx drizzle-kit push"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.22.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -33,9 +36,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "next-intl": "^4.1.0",
+    "pg": "^8.16.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
@@ -58,6 +64,8 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "chrono-node": "^2.8.3",
+    "dotenv-cli": "^8.0.0",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "eslint-plugin-storybook": "^9.0.12",
