--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.832.0",
+    "@aws-sdk/s3-presigned-post": "^3.832.0",
     "@clerk/nextjs": "^6.22.0",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
