--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier . --write",
     "prepare": "husky install",
     "generate:migrations": "npx drizzle-kit generate",
-    "apply:migrations": "npx drizzle-kit push"
+    "apply:migrations": "npx drizzle-kit push",
+    "seed:db": "tsx scripts/seedDatabase.ts"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -81,6 +82,7 @@
     "prettier": "3.5.3",
     "storybook": "^9.0.12",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
     "vitest": "^3.2.4"
