--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "framer-motion": "^12.19.1",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "next-intl": "^4.1.0",
